Revert "fix: remove build-bazel needs"
This reverts commit 35f3ff0c0c1a7644754e5987273a0afb3476852d.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,7 +153,7 @@ jobs:
         run: echo ${{ steps.build-docker-m.outputs.digest }}
   build-bazel:
     runs-on: ${{ matrix.os }}
-#    needs: [build]
+    needs: [build]
     strategy:
       matrix:
         java-version: [25]
