chore(deps): update dependency bazel to v8 (#1331)
* chore(deps): update dependency bazel to v8

* feat: 迁移到Bzlmod

* fix: fix  statements may not be used in MODULE.bazel files

* fix: remove build-bazel needs

* fix: remove  maven_deps.bzl

* fix: update module bazel

* fix: update module bazel

* fix: update module bazel

* fix: bump rules java to 8.16.1

* fix: update module bazel

* fix: update module bazel

* fix: update module bazel

* fix: update module bazel

* fix: update module bazel

* fix: update module bazel

* Revert "fix: remove build-bazel needs"

This reverts commit 35f3ff0c0c1a7644754e5987273a0afb3476852d.

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -6,6 +6,7 @@ package(default_visibility = ["//visibility:public"])
 java_library(
     name = "java-maven-lib",
     srcs = glob(["src/main/java/org/daming/hoteler/*.java"]),
+    # 依赖列表已从 @unpinned_maven 恢复为 @maven
     deps = [
         "@maven//:org_springframework_boot_spring_boot_starter_web",
         "@maven//:org_springframework_boot_spring_boot_starter_jdbc",
@@ -51,14 +52,13 @@ java_binary(
     runtime_deps = [":java-maven-lib"],
 )
 
-springboot(  
-    name = "hoteler",  
+springboot(
+    name = "hoteler",
     boot_app_class = "org.daming.hoteler.HotelerApplication",
-    # refrence the library
+    # 引用 java_library
     java_library = ":java-maven-lib",
     boot_launcher_class = 'org.springframework.boot.loader.launch.JarLauncher',
 )
-
 
 java_test(
     name = "tests",
