--- a/deplyoments/helm/values.yaml
+++ b/deplyoments/helm/values.yaml
@@ -10,6 +10,17 @@ image:
   tag: "0.0.3"
   pullPolicy: IfNotPresent
 
+redis:
+  host: redis
+  port: 6379
+  database: 0
+  password: 12345
+
+datasource:
+  url: jdbc:postgresql://postgres:5432/postgres
+  username: postgres
+  password: 123456
+
 service:
   type: NodePort
   port: 8443
