--- a/deplyoments/helm/templates/namespace.yaml
+++ b/deplyoments/helm/templates/namespace.yaml
@@ -2,3 +2,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ .Values.app.namespace }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/resource-policy": keep
